--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.20",
@@ -36,6 +38,7 @@
     "@angular/cli": "~16.0.3",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
